# PGviewer

./: CMakeLists.txt  README.md  sample_config.json
resources/: resources.qrc
src/: main.cpp
src/core/: ConfigManager.cpp  ConfigManager.h  DatabaseConnection.cpp  DatabaseConnection.h  QueryResult.cpp  QueryResult.h
src/services/: DatabaseService.cpp  DatabaseService.h  ExportService.cpp  ExportService.h
src/ui/: CellEditDelegate.cpp  CellEditDelegate.h  DatabaseExplorer.cpp  DatabaseExplorer.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  QueryEditor.cpp  QueryEditor.h  StatusBar.cpp  StatusBar.h  TableViewer.cpp  TableViewer.h  ThemeManager.cpp  ThemeManager.h
